[package]
name = "clay"
version = "0.1.0"
authors = ["Youngjoon Lee <taxihighway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# To disable unwinding (due to the error: language item required, but not found: `eh_personality`)
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.8"